Button for game works now

--- a/HTML/splash.html
+++ b/HTML/splash.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Connect 4</h1>
-        <form action="/game" method="get">
+        <form action="gameScreen.html" method="get">
             <button type="submit">PLAY</button>
         </form>
         <form action="rules.html" method="get">
