--- a/HTML/gameScreen.html
+++ b/HTML/gameScreen.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Connect Four Online</title>
@@ -20,7 +19,7 @@
         </header>
 
         <main>
-            <section id = "board"> <table> Board</table> </section>
+            <section id = "board"> <table> Board </table> </section>
         </main>
     </body>    
 </html>
