--- a/HTML/gameScreen.html
+++ b/HTML/gameScreen.html
@@ -7,14 +7,18 @@
         
     <body>
         <header>
-            <div>Time Elasped: 
-                <b> <em id = "timer"> 42:42 </em> </b>
+            <div id = "top-left">Time Elasped:
+                <b> <div id = "timer"> 42:42 </div> </b>
             </div>
-            <p>You're playing as: 
-                <strong> <em id = "color" style="color:rgb(241, 190, 62)">Yellow</em> </strong> <br>
-                <b> It's your turn </b> </p>
+            <br>
+            <div>You're playing as: 
+                <!--For now we have colour here, but we will do it properly in CSS-->
+                <strong> <em> <div id = "color" style="color:rgb(241, 190, 62)"> Yellow </div> </em> </strong>
+                <b> It's your turn </b> 
+            </div>
+            <br>
             <div>You're playing against:
-                <i> <em id =  "opponent"> Username </em> </i>
+                <i> <div id =  "opponent"> Username </div> </i>
             </div>
         </header>
 
