--- a/HTML/gameScreen.html
+++ b/HTML/gameScreen.html
@@ -7,17 +7,17 @@
         
     <body>
         <header>
-            <div id = "top-left">Time Elasped:
+            <div id = "topLeft">Time Elasped:
                 <b> <div id = "timer"> 42:42 </div> </b>
             </div>
             <br>
-            <div>You're playing as: 
+            <div id = "topMiddle">You're playing as: 
                 <!--For now we have colour here, but we will do it properly in CSS-->
-                <strong> <em> <div id = "color" style="color:rgb(241, 190, 62)"> Yellow </div> </em> </strong>
+                <strong> <em id = "color" style="color:rgb(241, 190, 62)"> Yellow </em> </strong> <br>
                 <b> It's your turn </b> 
             </div>
             <br>
-            <div>You're playing against:
+            <div id = "topRight">You're playing against:
                 <i> <div id =  "opponent"> Username </div> </i>
             </div>
         </header>
