--- a/HTML/gameScreen.html
+++ b/HTML/gameScreen.html
@@ -14,7 +14,7 @@
             <div id = "topMiddle">You're playing as: 
                 <!--For now we have colour here, but we will do it properly in CSS-->
                 <strong> <em id = "color" style="color:rgb(241, 190, 62)"> Yellow </em> </strong> <br>
-                <b> It's your turn </b> 
+                <b id = "yourTurn"> It's your turn </b> 
             </div>
             <br>
             <div id = "topRight">You're playing against:
