--- a/HTML/rules.html
+++ b/HTML/rules.html
@@ -11,7 +11,7 @@
             <li>The color red always has the first move</li>
             <li>Players alternate turns, only one piece may be dropped in each turn</li>
             <li>A player can drop their piece in one of the seven slots</li>
-            <li>The game ends when there are 4 pieces of the same color in a row, or when there are no valid moves anymore</li>
+            <li>The game ends when there are 4 pieces of the same color in a row, column, or diagonal or when there are no valid moves anymore</li>
         </ul>
     </body>
 </html>
