changed the buttons to work with the routes. Only now there is a '?' at the end of every link.

--- a/con4/public/splash.html
+++ b/con4/public/splash.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Connect 4</h1>
-        <form action="gameScreen.html" method="get">
+        <form action="/play" method="get">
             <button type="submit">PLAY</button>
         </form>
-        <form action="rules.html" method="get">
+        <form action="/rules" method="get">
             <button type="submit">RULES</button>
         </form>
 
