--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -23,7 +23,13 @@
         </header>
 
         <main>
-            <section id = "board"> <table> Board </table> </section>
+            <section id = "board"><table></table></section>
         </main>
-    </body>    
+
+        <script src = "javascripts/client.js"></script>
+        <script src="javascripts/gameState.js"></script>
+
+    </body>
+
+
 </html>
