In app.js I changed it to match it demo game. In gameScreen.html I included all the js files.

--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -35,6 +35,8 @@
         </main>
 
         <script src="javascripts/gameState.js"></script>
+        <script src="javascripts/messages.js"></script>
+        <script src="javascripts/config.js"></script>
 
 
     </body>
