app.js: Adjusted for typos when coping from demo game, added some other things that are in the demo game. Made it send correct messages.
gameScreen.html: Made the colors appear again in the table. Switched the ordering of the script imports.

gameState.js: Made it send correct messages. Added the functionality that when you add a piece, the html says that it's not your turn anymore.

--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <title>Connect Four Online</title>
         <style>
-            .yellow {
+            .YELLOW {
                 background-color: yellow;
             }
-            .red {
+            .RED {
                 background-color: red;
             }
         </style>
@@ -34,9 +34,10 @@
             <section id = "board"><table></table></section>
         </main>
 
+        <script src="javascripts/config.js"></script>
         <script src="javascripts/gameState.js"></script>
         <script src="javascripts/messages.js"></script>
-        <script src="javascripts/config.js"></script>
+
 
 
     </body>
