Changes from last night

--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -10,6 +10,11 @@
             .RED {
                 background-color: red;
             }
+
+            #board {
+                cursor: pointer;
+                user-select: none;
+            }
         </style>
     </head>
 
@@ -26,7 +31,7 @@
             </div>
             <br>
             <div id = "topRight">You're playing against:
-                <i> <div id =  "opponent"> Username </div> </i>
+                <i> <div id = "opponent"> Username </div> </i>
             </div>
         </header>
 
