--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -27,7 +27,7 @@
             <div id = "topMiddle">You're playing as: 
                 <!--For now we have colour here, but we will do it properly in CSS-->
                 <strong> <em id = "color" style="color:rgb(241, 190, 62)"> Yellow </em> </strong> <br>
-                <b id = "yourTurn"> It's your turn </b> 
+                <b id = "yourTurn"> Waiting for an opponent! </b> 
             </div>
             <br>
             <div id = "topRight">You're playing against:
