MADE A WORKING GAME!!!

--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -20,8 +20,8 @@
 
     <body>
         <header>
-            <div id = "topLeft">Time Elasped:
-                <b> <div id = "timer"> 42:42 </div> </b>
+            <div id = "topLeft">Average time per piece:
+                <b> <div id = "Average time per piece"> 0 </div> </b>
             </div>
             <br>
             <div id = "topMiddle">You're playing as: 
