--- a/con4/public/rules.html
+++ b/con4/public/rules.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Rules</title>
+        <link rel="stylesheet" href="stylesheets/rules.css">
     </head>
     <body>
         <h1>Rules</h1>
         <ul id="RulesList">
-            <li>A player gets assigned a random color</li>
-            <li>The color red always has the first move</li>
-            <li>Players alternate turns, only one piece may be dropped in each turn</li>
-            <li>A player can drop their piece in one of the seven slots</li>
-            <li>The game ends when there are 4 pieces of the same color in a row, column, or diagonal or when there are no valid moves anymore</li>
+            <p>A player gets assigned a random color <br><br>
+            The color red always has the first move <br><br>
+            Players alternate turns, only one piece may be dropped in each turn <br><br>
+            A player can drop their piece in one of the seven slots <br><br>
+            The game ends when there are 4 pieces of the same color in a row,<br> column, or diagonal or when there are no valid moves anymore</p>
         </ul>
     </body>
 </html>
