--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -12,20 +12,17 @@
                 <div id = "topLeft">Average time per piece:
                     <b> <div id = "Average time per piece"> 0 </div> </b>
                 </div>
-                <br>
-                <div id = "topMiddle">You're playing as:
-                    <!--For now we have colour here, but we will do it properly in CSS-->
-                    <strong> <em id = "color"> Yellow </em> </strong> <br>
-                </div>
-                <div id="topRight">
+                <div id="topMiddle">
                     <b id = "yourTurn"> Waiting for an opponent! </b>
                 </div>
-                <br>
+                <div id = "topRight">You're playing as:
+                    <div id="color"></div>
+                </div>
             </div>
         </header>
 
         <main>
-            <section id = "board"><table></table></section>
+            <section id = "board"></section>
         </main>
 
         <script src="javascripts/config.js"></script>
