--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -28,6 +28,9 @@
         <script src="javascripts/config.js"></script>
         <script src="javascripts/messages.js"></script>
         <script src="javascripts/gameState.js"></script>
+
+        <script src="javascripts/checkResolution.js"></script>
+
     </body>
 
 
