--- a/con4/public/rules.html
+++ b/con4/public/rules.html
@@ -14,5 +14,7 @@
             A player can drop their piece in one of the seven slots <br><br>
             The game ends when there are 4 pieces of the same color in a row,<br> column, or diagonal or when there are no valid moves anymore</p>
         </ul>
+
+        <script src="javascripts/checkResolution.js"></script>
     </body>
 </html>
