Removed some console logs, removed some commented code, removed unused constants.
In gameScreen.html removed the div on line 13
In rules.html I changed the ul element to a div

Deleted the splash.html file

--- a/con4/public/gameScreen.html
+++ b/con4/public/gameScreen.html
@@ -10,7 +10,7 @@
         <header>
             <div id="topBar">
                 <div id = "topLeft">Average time per piece:
-                    <b> <div id = "Average time per piece"> 0 </div> </b>
+                    <b id = "Average time per piece"> 0 </b>
                 </div>
                 <div id="topMiddle">
                     <b id = "yourTurn"> Waiting for an opponent! </b>
