--- a/con4/public/rules.html
+++ b/con4/public/rules.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <h1>Rules</h1>
-        <ul id="RulesList">
+        <div id="RulesList">
             <p>A player gets assigned a random color <br><br>
             The color red always has the first move <br><br>
             Players alternate turns, only one piece may be dropped in each turn <br><br>
             A player can drop their piece in one of the seven slots <br><br>
             The game ends when there are 4 pieces of the same color in a row,<br> column, or diagonal or when there are no valid moves anymore</p>
-        </ul>
+        </div>
 
         <script src="javascripts/checkResolution.js"></script>
     </body>
